syntax = "proto3";
package transactionpb;
import "github.com/dappley/go-dappley/core/transactionbase/pb/transactionBase.proto";


message Transactions{
    repeated Transaction transactions = 1;
}

message NonceTransactions {
    repeated NonceTransaction transactions = 1;
}

message NonceTransaction {
    Transaction transaction = 1;
    uint64 nonce = 2;
}

message Transaction{
    bytes id = 1;
    repeated transactionbasepb.TXInput vin = 2;
    repeated transactionbasepb.TXOutput vout = 3;
    bytes tip = 4;
    bytes gas_limit = 5;
    bytes gas_price = 6;
    int32 type = 7;
}

message TransactionNode{
    map<string, Transaction> children = 1;
    transactionpb.Transaction value = 2;
    int64   size = 3;
}

message TransactionJournal {
    repeated transactionbasepb.TXOutput vout = 1;
}

